--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "clickhouse": "^2.6.0",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "fast-csv": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2"
